prusti-tests/tests/verify/ui/invalid-postcondition-strengthening.stderr
error: [Prusti: verification error] the method's postcondition may not be a valid strengthening of the trait's postcondition.
  --> $DIR/invalid-postcondition-strengthening.rs:4:15
   |
4  |     #[ensures(result > 10)]
   |               ^^^^^^^^^^^
...
12 |     #[ensures(result > 5)]
   |               ^^^^^^^^^^
   |
   = help: The implemented method's postcondition should imply the trait's postcondition.

error: aborting due to previous error

